--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
     <include
         android:id="@+id/login_title"
-        layout="@layout/activity_title_bar" />
+        layout="@layout/actionbar_top" />
 
     <ImageView
         android:id="@+id/login_logo"
